# AbstractCamera

./: .gitignore  ACKNOWLEDGMENTS.md  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  SECURITY.md  llms-full.txt  llms.txt  pyproject.toml
docs/: README.md  api.md  architecture.md  faq.md  getting-started.md  troubleshooting.md
docs/adr/: 0001_session_protocol_boundary.md  0002_family_semantics_are_adapter_owned.md  0003_base_deps_carry_frames_transports_are_extras.md  0004_capability_honesty.md  0005_detection_in_package_analyzers_injected.md  0006_discovery_and_camera_identity.md  0007_regression_policy_for_unconnected_hardware.md  0008_multi_camera_hub_and_capture_layout.md  0009_webcam_identity_by_unique_id.md  0010_dwarf_network_family_and_mount_actions.md  README.md
docs/backlog/: README.md
scripts/: debug_dwarf.py  generate_llms_full.py  hardware_validation_sony.py  hardware_validation_sony_2.py  validate_dwarf.py  validate_multicam.py  validate_nikon.py  validate_webcam.py  validate_webcam_identity.py
src/abstractcamera/: __init__.py  camera_manager.py  capture_ops.py  cli.py  clips.py  config_ledger.py  constants.py  detection.py  detection_runner.py  discovery.py  downloads.py  errors.py  hub.py  identity.py  jpeg.py  ptp_safe.py  raw_thumbs.py  sequences.py  session.py  wire.py  worker.py
src/abstractcamera/adapters/: __init__.py  base.py  dwarf.py  nikon_z.py  sony_alpha.py  webcam.py
src/abstractcamera/drivers/: __init__.py  avf_capture.py  avf_enum.py  dwarf_driver.py  dwarf_session.py  dwarf_transport.py  dwarf_wire.py  fake_driver.py  gphoto2_driver.py  webcam_driver.py  webcam_session.py
src/abstractcamera/sim/: __init__.py  gphoto2.py  preview_render.py  profiles.py
tests/: test_detection.py  test_discovery.py  test_dwarf_family.py  test_hub_and_layout.py  test_manager_regression.py  test_ptp_safe.py  test_sequences.py  test_session_protocol.py  test_sony_adapter.py  test_sony_manager.py  test_webcam_family.py  test_write_sequence_pin.py
